# wyf9s-discord-bot

./: .gitignore  .pymarkdown.json  AGENTS.md  LICENSE  README.en.md  README.md  config.example.yaml  config.py  i18n.py  lang_store.py  main.py  perm.example.yaml  perm.py  prek.toml  pyproject.toml  requirements.txt  update.sh  utils.py
.github/workflows/: deploy-docs.yml
cogs/: admin.py  announce.py  antispam.py  emoji.py  lang.py  lock.py  manage.py  perm.py  subscribe_store.py  tools.py  voice.py
docs/: .gitignore  index.md  package.json
docs/.vitepress/: config.mts
docs/en/: index.md
docs/en/guide/: configuration.md  getting-started.md  introduction.md  permissions.md  rate-limit.md
docs/en/legal/: privacy.md  tos.md
docs/en/modules/: admin.md  announce.md  antispam.md  audit.md  emoji.md  index.md  lang.md  lock.md  manage.md  perm.md  tools.md  voice.md
docs/guide/: configuration.md  getting-started.md  introduction.md  permissions.md  rate-limit.md
docs/legal/: privacy.md  tos.md
docs/modules/: admin.md  announce.md  antispam.md  audit.md  emoji.md  index.md  lang.md  lock.md  manage.md  perm.md  tools.md  voice.md
docs/public/: CNAME
lang/: en.yaml  zh.yaml
modules/: antispam.py  audit.py  clear_message.py  emoji.py  lock.py  manage.py  tools.py  voice.py
